2006-09-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/include/book.hh (class Book): idem.

	* lily/include/context-def.hh (struct Context_def): idem.

	* lily/include/score.hh (class Score): don't derive from Input.

	* lily/book.cc (Book): add a copy ctor. 

	* buildscripts/output-distance.py (FileLink.calc_distance): count
	orphans in distance too.

	* python/midi.c (midi_parse_track): robustness: don't read past
	end of string.

	* ly/performer-init.ly: add Control_track_performer, move
	Tempo_performer and Time_signature_performer to Score.        

	* lily/score-performer.cc (acknowledge_audio_elements): override
	from base class: add to audio-columns

	* lily/control-track-performer.cc (add_text): new file: generate
	the control track.

	* lily/performance.cc: move output_header_track to Control_track_performer()

	* lily/midi-walker.cc (Midi_walker): get channel in constructor.

	* lily/include/midi-item.hh (class Midi_channel_item): insert
	class into hierarchy, for items that can have a channel setting. Dehungarify.

	* lily/include/performer.hh (class Performer): remove
	play_element();  move functionality into announce/acknowledge.

	* lily/audio-staff.cc (output): remove channel_ from Midi_track.

	* lily/tie-engraver.cc (stop_translation_timestep): only wipe
	heads_to_tie_ if there are new heads to tie.  Fixes polyphony in ties.

2006-08-28  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/tie-engraver.cc (stop_translation_timestep): robustness for
	ambituses.

	* lily/all-font-metrics.cc: remove TFM support.

	* lily/include/tfm.hh: remove TFM support, TFM reader.

	* lily/include/binary-source-file.hh: remove Binary_source_file.

2006-08-27  Graham Percival  <gpermus@gmail.com>

	* Documentation/topdocs/NEWS.itely: add @c marker for
	stuff I've processed.

	* Documentation/user/ various: info from NEWS.

2006-08-27  Joe Neeman  <joeneeman@gmail.com>

	* lily/paper-column-engraver.cc (finalize): Oops, this change